# ciddi-oyler

./: .gitignore  README.md  ciddi-oyler.cabal  stack.yaml
.stack-work/install/x86_64-osx/lts-10.3/8.2.2/doc/ciddi-oyler-0.1.0.0/: LICENSE
.stack-work/install/x86_64-osx/lts-10.3/8.2.2/flag-cache/: HUnit-1.6.0.0-Co0VFs8PjIYJtvd3iwPPg  MissingH-1.4.0.1-ImyRV7T8Qr2ErDeNfuBTMk  call-stack-0.1.0-BVjoAlBRe9FCSr5eFfllei  ciddi-oyler-0.1.0.0  clock-0.7.2-7eenmRf30tW97adCwu2PN3  extra-1.6.2-5UpcCf56HjZ7Ya4738pbDF  hslogger-1.2.10-130Szb1sQo3JyMDvQNrKMO  mtl-2.2.1-DscMMmDQUE6GBfOSl4qMUH  network-2.6.3.2-Elf6Dxkfz0iKjb1zv5eBTP  old-locale-1.0.0.7-uLYLcRn7Nv8SkmeS8fMf9  old-time-1.1.0.3-LmKk8FUXtYwDVw5bR99HBe  parsec-3.1.11-3BgBURmbRiVF8fgoxhAiBa  random-1.1-LLUGZ7T9DqQ5vN0Jbcd0We  regex-base-0.93.2-rcKBNTI69reeBx0eaPBC  regex-compat-0.95.1-vWU5STOtMi6yQryYjRhah  regex-posix-0.95.2-1QNDtrQ5eTp5sBtNrX4AQD  text-1.2.2.2-9VTsh6V7U7hpagw2HDvpZ  text-format-simple-1.1.0-CZ0Z1CK4GuC7TALCsw8WXh
.stack-work/install/x86_64-osx/lts-10.3/8.2.2/lib/x86_64-osx-ghc-8.2.2/: libHStext-format-simple-1.1.0-CZ0Z1CK4GuC7TALCsw8WXh-ghc8.2.2.dylib
.stack-work/install/x86_64-osx/lts-10.3/8.2.2/lib/x86_64-osx-ghc-8.2.2/text-format-simple-1.1.0-CZ0Z1CK4GuC7TALCsw8WXh/Text/: Format.dyn_hi  Format.hi
.stack-work/install/x86_64-osx/lts-10.3/8.2.2/pkgdb/: package.cache  text-format-simple-1.1.0-CZ0Z1CK4GuC7TALCsw8WXh.conf
src/: .Euler.hs.swp  .Main.hs.swp  Euler.hs  Main.hs
