name:                ciddi-oyler
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/cahilfil/ciddi-oyler#readme
license:             BSD3
license-file:        LICENSE
author:              Yunus Aydin
maintainer:          yunus.aydin@protonmail.com
copyright:           2018 Yunus Aydin
category:            Math
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable ciddi-oyler
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                    ,  extra
                    ,  text-format-simple
  other-modules:       Euler
